tests/ui/type-item.stderr
error: expected `struct` or `enum`
 --> $DIR/type-item.rs:3:9
  |
3 |     pub type Number = u64;
  |         ^^^^
