tests/ui/type-item.rs
polygraph::schema!{
    type Schema;
    pub type Number = u64;
}

fn main() {
}
